# openstack

./: .clippy.toml  .coderabbit.yaml  .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: benchmark-deep.yml  ci.yml  cross-compile.yml  docker.yml  semgrep.yml  studio-e2e.yml
artifacts/: studio_coverage_report.json  studio_guided_coverage.json
crates/aws-protocol/: Cargo.toml
crates/aws-protocol/src/: ec2.rs  error.rs  json.rs  lib.rs  protocol.rs  query.rs  rest_json.rs  rest_xml.rs
crates/aws-protocol/tests/: protocol_integration.rs
crates/config/: Cargo.toml
crates/config/src/: directories.rs  lib.rs  logging.rs  services.rs
crates/dns/: Cargo.toml
crates/dns/src/: lib.rs  server.rs
crates/dns/tests/: dns_tests.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: chain.rs  context.rs  cors.rs  lib.rs  port_allocator.rs  server.rs  sigv4.rs
crates/gateway/tests/: gateway_integration.rs  studio_security_tests.rs
crates/internal-api/: Cargo.toml
crates/internal-api/src/: config_api.rs  diagnose.rs  health.rs  info.rs  init.rs  lib.rs  plugins.rs  router.rs  studio.rs
crates/internal-api/tests/: internal_api_tests.rs  studio_contract_tests.rs
crates/openstack/: Cargo.toml
crates/openstack/src/: main.rs
crates/openstack/tests/: cli_lifecycle_integration.rs
crates/service-framework/: Cargo.toml
crates/service-framework/src/: arn.rs  container.rs  lib.rs  lifecycle.rs  manager.rs  skeleton.rs  spooled.rs  traits.rs
crates/service-framework/tests/: multitenancy_tests.rs  service_framework.rs
crates/services/acm/: Cargo.toml
crates/services/apigateway/: Cargo.toml
crates/services/cloudformation/: Cargo.toml
crates/services/cloudformation/src/: error.rs  lib.rs  provider.rs  store.rs
crates/services/cloudformation/tests/: cloudformation_tests.rs
crates/services/cloudwatch/: Cargo.toml
crates/services/dynamodb/: Cargo.toml
crates/services/ec2/: Cargo.toml
crates/services/ecr/: Cargo.toml
crates/services/eventbridge/: Cargo.toml
crates/services/firehose/: Cargo.toml
crates/services/iam/: Cargo.toml
crates/services/kinesis/: Cargo.toml
crates/services/kms/: Cargo.toml
crates/services/lambda/: Cargo.toml
crates/services/lambda/src/: docker.rs  error.rs  lib.rs  provider.rs  store.rs
crates/services/lambda/tests/: lambda_tests.rs
crates/services/opensearch/: Cargo.toml
crates/services/redshift/: Cargo.toml
crates/services/route53/: Cargo.toml
crates/services/s3/: Cargo.toml
crates/services/s3/src/: error.rs  lib.rs  object_store.rs  persistence.rs  provider.rs  store.rs
crates/services/s3/tests/: s3_tests.rs
crates/services/secretsmanager/: Cargo.toml
crates/services/secretsmanager/src/: error.rs  lib.rs  provider.rs  store.rs
crates/services/secretsmanager/tests/: secretsmanager_tests.rs
crates/services/ses/: Cargo.toml
crates/services/sns/: Cargo.toml
crates/services/sqs/: Cargo.toml
crates/services/sqs/src/: error.rs  lib.rs  provider.rs  store.rs
crates/services/sqs/tests/: sqs_tests.rs
crates/services/ssm/: Cargo.toml
crates/services/stepfunctions/: Cargo.toml
crates/services/sts/: Cargo.toml
crates/state/: Cargo.toml
crates/state/src/: bundle.rs  hooks.rs  lib.rs  manager.rs  persistence.rs  scoping.rs
crates/state/tests/: state_tests.rs
crates/studio-ui/: Cargo.toml  README.md  package.json
crates/studio-ui/schemas/: studio-guided-flow.manifest.v1.schema.json
crates/studio-ui/src/: api.rs  catalog.rs  console.rs  dashboard.rs  guided_manifest.rs  guided_renderer.rs  guided_runtime.rs  history.rs  lib.rs  models.rs  navigation.rs  protocol_adapters.rs  service_detail.rs  state.rs  workflow.rs  workspace.rs
crates/studio-ui/src/styles/: input.css
crates/studio-ui/tests/: api_tests.rs  catalog_workflow_tests.rs  guided_renderer_integration_tests.rs  history_console_tests.rs  protocol_adapter_conformance_tests.rs  state_tests.rs
crates/studio-ui/tests/fixtures/: guided-flow-dynamodb.json  guided-flow-lambda.json  guided-flow-s3.json  guided-flow-sqs.json  protocol-json-target.json  protocol-query.json  protocol-rest-json.json  protocol-rest-xml.json
crates/tests/integration/: Cargo.toml
crates/tests/integration/src/: benchmark.rs  classification.rs  harness.rs  lib.rs  parity.rs
crates/tests/integration/tests/: smoke_tests.rs  studio_e2e_tests.rs  studio_guided_manifest_e2e_tests.rs
docs/: act-benchmark-validation.md  benchmark-optimization-backlog.md  performance-progress-template.md  performance-remediation-matrix.md  studio-guided-flow-change-management.md  studio-guided-flow-troubleshooting.md  studio-guided-manifest-authoring.md  studio-guided-manifest-contribution-template.md  studio-release-checklist.md  studio.md
manifests/guided/: README.md  acm.guided.json  apigateway.guided.json  cloudformation.guided.json  cloudwatch.guided.json  dynamodb.guided.json  ec2.guided.json  ecr.guided.json  events.guided.json  firehose.guided.json  iam.guided.json  kinesis.guided.json  kms.guided.json  lambda.guided.json  opensearch.guided.json  redshift.guided.json  review-checklist.md  route53.guided.json  s3.guided.json  secretsmanager.guided.json  ses.guided.json  sns.guided.json  sqs.guided.json  ssm.guided.json  states.guided.json  sts.guided.json
openspec/changes/add-benchmark-harness/: design.md
openspec/changes/deterministic-ci-benchmark-runtime-image/: final-validation-report.md  tasks.md
scripts/: benchmark_progress_dashboard.py  benchmark_regression_gate.py  benchmark_report_consolidated.py  benchmark_report_tables.py  check_release_binary_size.sh  check_studio_asset_budget.sh  generate_guided_manifests.py  studio_coverage_report.py  studio_guided_coverage_gate.py  validate_harness_coverage.py
tests/: docker-compose-test.sh
tests/bench/: bench_memory.sh  bench_startup.sh
tests/benchmark/: README.md
tests/compat/: compatibility_tests.sh
tests/harness/: service-matrix.json
tests/parity/: README.md
tests/terraform/: main.tf  run_terraform_test.sh
(+236 files in other folders)
