[workspace]
resolver = "2"
members = [
    "crates/openstack",
    "crates/config",
    "crates/gateway",
    "crates/aws-protocol",
    "crates/service-framework",
    "crates/state",
    "crates/internal-api",
    "crates/dns",
    "crates/services/s3",
    "crates/services/sqs",
    "crates/services/sns",
    "crates/services/dynamodb",
    "crates/services/lambda",
    "crates/services/iam",
    "crates/services/sts",
    "crates/services/kms",
    "crates/services/cloudformation",
    "crates/services/cloudwatch",
    "crates/services/kinesis",
    "crates/services/firehose",
    "crates/services/eventbridge",
    "crates/services/stepfunctions",
    "crates/services/apigateway",
    "crates/services/ec2",
    "crates/services/route53",
    "crates/services/ses",
    "crates/services/ssm",
    "crates/services/secretsmanager",
    "crates/services/acm",
    "crates/services/ecr",
    "crates/services/opensearch",
    "crates/services/redshift",
    "crates/tests/integration",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/openstack-dev/openstack"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = { version = "0.8", features = ["multipart", "macros"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
quick-xml = { version = "0.39", features = ["serialize"] }

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Concurrency
dashmap = { version = "6", features = ["serde"] }
tokio-util = { version = "0.7", features = ["full"] }

# Streaming / body handling
http-body = "1"
http-body-util = "0.1"
futures-core = "0.3"
pin-project-lite = "0.2"
tempfile = "3"

# Docker (for Lambda execution)
bollard = "0.20"

# DNS
hickory-server = "0.25"
hickory-client = "0.25"
hickory-proto = "0.25"
hickory-resolver = "0.25"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
rand = "0.10"
bytes = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
once_cell = "1"
regex = "1"
url = "2"
mime = "0.3"

# Internal crates
openstack-config = { path = "crates/config" }
openstack-gateway = { path = "crates/gateway" }
openstack-aws-protocol = { path = "crates/aws-protocol" }
openstack-service-framework = { path = "crates/service-framework" }
openstack-state = { path = "crates/state" }
openstack-internal-api = { path = "crates/internal-api" }
openstack-dns = { path = "crates/dns" }

# Service crates
openstack-s3 = { path = "crates/services/s3" }
openstack-sqs = { path = "crates/services/sqs" }
openstack-sns = { path = "crates/services/sns" }
openstack-dynamodb = { path = "crates/services/dynamodb" }
openstack-lambda = { path = "crates/services/lambda" }
openstack-iam = { path = "crates/services/iam" }
openstack-sts = { path = "crates/services/sts" }
openstack-kms = { path = "crates/services/kms" }
openstack-cloudformation = { path = "crates/services/cloudformation" }
openstack-cloudwatch = { path = "crates/services/cloudwatch" }
openstack-kinesis = { path = "crates/services/kinesis" }
openstack-firehose = { path = "crates/services/firehose" }
openstack-eventbridge = { path = "crates/services/eventbridge" }
openstack-stepfunctions = { path = "crates/services/stepfunctions" }
openstack-apigateway = { path = "crates/services/apigateway" }
openstack-ec2 = { path = "crates/services/ec2" }
openstack-route53 = { path = "crates/services/route53" }
openstack-ses = { path = "crates/services/ses" }
openstack-ssm = { path = "crates/services/ssm" }
openstack-secretsmanager = { path = "crates/services/secretsmanager" }
openstack-acm = { path = "crates/services/acm" }
openstack-ecr = { path = "crates/services/ecr" }
openstack-opensearch = { path = "crates/services/opensearch" }
openstack-redshift = { path = "crates/services/redshift" }

[workspace.lints.rust]
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
