[package]
name = "openstack-aws-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
quick-xml.workspace = true
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
base64.workspace = true
