[package]
name = "openstack-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
once_cell.workspace = true
url.workspace = true

[dev-dependencies]
