[package]
name = "openstack-dns"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openstack-config.workspace = true

tokio.workspace = true
hickory-server.workspace = true
hickory-proto.workspace = true
hickory-resolver.workspace = true
async-trait.workspace = true
tracing.workspace = true
anyhow.workspace = true
