[package]
name = "openstack-service-framework"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openstack-config.workspace = true
openstack-aws-protocol.workspace = true

tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true

[dev-dependencies]
openstack-sqs.workspace = true
openstack-dynamodb.workspace = true
openstack-s3.workspace = true
openstack-gateway.workspace = true
