[package]
name = "openstack-cloudformation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openstack-config.workspace = true
openstack-service-framework.workspace = true
openstack-state.workspace = true
openstack-aws-protocol.workspace = true

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
bytes.workspace = true
