[package]
name = "openstack-lambda"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openstack-config.workspace = true
openstack-service-framework.workspace = true
openstack-state.workspace = true
openstack-aws-protocol.workspace = true

tokio.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
base64.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
axum.workspace = true

# Docker
bollard.workspace = true

# Zip extraction for function code
zip = "8"
tempfile = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde_json.workspace = true
base64.workspace = true
zip = "8"
tempfile = "3"
