[package]
name = "openstack-s3"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openstack-config.workspace = true
openstack-service-framework.workspace = true
openstack-state.workspace = true
openstack-aws-protocol.workspace = true

tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
bytes.workspace = true
md5 = "0.8"
hex.workspace = true
base64.workspace = true
quick-xml.workspace = true
tempfile.workspace = true
futures-core.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
