[package]
name = "openstack-integration-tests"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tempfile.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { workspace = true }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono = { workspace = true }
quick-xml = { workspace = true }
regex = { workspace = true }
urlencoding = "2"

# The server itself
openstack-config = { workspace = true }
openstack-gateway = { workspace = true }
openstack-service-framework = { workspace = true }
openstack-state = { workspace = true }
openstack-s3 = { workspace = true }
openstack-sqs = { workspace = true }
openstack-sns = { workspace = true }
openstack-dynamodb = { workspace = true }
openstack-iam = { workspace = true }
openstack-sts = { workspace = true }
openstack-kms = { workspace = true }
openstack-secretsmanager = { workspace = true }
openstack-ssm = { workspace = true }
openstack-acm = { workspace = true }
openstack-kinesis = { workspace = true }
openstack-firehose = { workspace = true }
openstack-cloudwatch = { workspace = true }
openstack-eventbridge = { workspace = true }
openstack-stepfunctions = { workspace = true }
openstack-apigateway = { workspace = true }
openstack-ec2 = { workspace = true }
openstack-route53 = { workspace = true }
openstack-ses = { workspace = true }
openstack-ecr = { workspace = true }
openstack-opensearch = { workspace = true }
openstack-redshift = { workspace = true }
openstack-cloudformation = { workspace = true }
openstack-lambda = { workspace = true }
openstack-studio-ui = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
tokio = { workspace = true }
